--- a/src/components/Layout/Main.less
+++ b/src/components/Layout/Main.less
@@ -18,6 +18,7 @@
 .header :global(.ant-menu-root)>li {
     float: right;
     margin-right: 16px;
+    border-bottom: 1px solid #efefef
 }
 
 .noMatch {
