--- a/src/components/Layout/SiderMenu.less
+++ b/src/components/Layout/SiderMenu.less
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #666;
     font-size: 16px;
     border-radius: 6px;
     margin: 16px;
