--- a/src/components/Layout/SiderMenu.less
+++ b/src/components/Layout/SiderMenu.less
@@ -1,10 +1,11 @@
 .logo {
-    height: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #666;
-    font-size: 16px;
-    border-radius: 6px;
-    margin: 16px;
+    color: #fff;
+    font-size: 14px;
+    margin: 10px;
+}
+.menuItem{
+    margin: 0px!important;
 }
