Commit: style fix

--- a/src/components/Layout/SiderMenu.less
+++ b/src/components/Layout/SiderMenu.less
@@ -2,10 +2,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding-top: 38px;
     color: #fff;
     font-size: 14px;
     margin: 10px;
 }
+
+.separator{
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: calc(100% - 18px);
+    height: 1px;
+    background: hsla(0,0%,100%,.2);
+    margin: 34px auto 29px;
+}
+
 .menuItem{
     margin: 0px!important;
 }
