--- a/src/components/Layout/SiderMenu.less
+++ b/src/components/Layout/SiderMenu.less
@@ -19,5 +19,10 @@
 }
 
 .menuItem{
-    margin: 0px!important;
+    // margin: 0px!important;
+    // background: rgb(0, 71, 113)!important;
+}
+
+.menuItemTextColor{
+    color: #fff!important;
 }
