--- a/src/components/Layout/Main.less
+++ b/src/components/Layout/Main.less
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: auto;
     :global(.ant-layout-content){
         height: 90%;
     }
