--- a/src/components/Layout/SiderMenu.less
+++ b/src/components/Layout/SiderMenu.less
@@ -1,23 +1,32 @@
 .logo {
-    display: flex;
-    align-items: center;
+    display        : flex;
+    align-items    : center;
     justify-content: center;
-    flex-direction: column;
-    padding-top: 38px;
-    color: #fff;
-    font-size: 14px;
-    margin: 10px;
+    flex-direction : column;
+    padding-top    : 38px;
+    color          : #fff;
+    font-size      : 14px;
+    margin         : 10px;
 }
 
-.separator{
+.separator {
     -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: calc(100% - 18px);
-    height: 1px;
-    background: hsla(0,0%,100%,.2);
-    margin: 34px auto 29px;
+    box-sizing        : border-box;
+    width             : calc(100% - 18px);
+    height            : 1px;
+    background        : hsla(0, 0%, 100%, .2);
+    margin            : 34px auto 29px;
 }
 
-.menuItemTextColor{
-    color: #fff!important;
+.menuItemTextColor {
+    color: #fff !important;
+}
+
+.silder {
+    border-right: 1px solid #efefef;
+    background  : #06789d;
+}
+
+:global(.ant-layout-sider-trigger) {
+    background: none !important;
 }
