--- a/src/views/login.html
+++ b/src/views/login.html
@@ -35,7 +35,7 @@
 
 <body>
   <div id="root" style="height: 100%;">
-    <div class="init-loading">Welcome to Alexa-BMS</div>
+    <div class="init-loading">Please Login Alexa-BMS</div>
   </div>
   <script src="./config.js"></script>
 </body>
