Commit: style fix

--- a/src/components/Layout/SiderMenu.less
+++ b/src/components/Layout/SiderMenu.less
@@ -20,6 +20,7 @@
 
 .menuItemTextColor {
     color: #fff !important;
+    margin-right: 0px!important;
 }
 
 .silder {
@@ -29,4 +30,8 @@
 
 :global(.ant-layout-sider-trigger) {
     background: none !important;
+}
+
+:global(.ant-menu-inline-collapsed) {
+    width: 79px;
 }
